# test

./: .gitignore  CMakeLists.txt  README.md  check_for_update.sh
Engine/JSNP/: jsnp.hpp
Engine/JSNP/includes/: Array.hpp  Array.inl  Config.hpp  Data.hpp  Data.inl  Object.hpp  Object.inl  Value.hpp  Value.inl  data_type.hpp
Engine/config/: compilation.json  config.yml
Engine/core/SW/: Component.hpp  Engine.hpp  Entity.hpp  Errors.hpp  Event.hpp  Manager.hpp  Module.hpp  Resources.hpp  Scene.hpp  Utils.hpp
Engine/core/SW/errors/: Error.hpp  NotImplemented.hpp
Engine/core/SW/utils/: Chrono.hpp  Matrix.hpp  Rect.hpp  Reference.hpp  Speech.hpp  Vector2.hpp  Vector3.hpp
Engine/core/includes/: Config.hpp  Log.hpp  concepts.hpp
Engine/core/includes/component/: Component.hpp  Component.inl  IComponent.hpp
Engine/core/includes/config/: Config.hpp
Engine/core/includes/engine/: Engine.hpp  moduleFunction.inl  sceneFunction.inl
Engine/core/includes/entity/: Entity.hpp  Entity.inl  IEntity.hpp
Engine/core/includes/error/: Error.hpp  Error.inl  NotImplemented.hpp
Engine/core/includes/event/: Event.hpp  Event.inl  EventInfo.hpp  EventListener.hpp  EventListener.inl  EventManager.hpp  EventManager.inl  IEventListener.hpp
Engine/core/includes/manager/: AManager.hpp  AManager.inl  IManager.hpp  ScriptManager.hpp
Engine/core/includes/module/: AModule.hpp  AModule.inl
Engine/core/includes/resources/: AResources.hpp
Engine/core/includes/scene/: AScene.hpp  AScene.inl  entityFunction.inl  managerFunction.inl
Engine/core/includes/utils/: Chrono.hpp  Chrono.inl  Reference.hpp  Reference.inl  Speech.hpp  matrix.hpp  matrix.inl  rect.hpp  rect.inl  vector2.hpp  vector2.inl  vector3.hpp  vector3.inl
Engine/sfml/SF/: Components.hpp  Event.hpp  Managers.hpp  Maths.hpp  Module.hpp  Resources.hpp  Utils.hpp
Engine/sfml/SF/components/: AnimatedSprite.hpp  BoxCollider.hpp  CircleShape.hpp  Drawable.hpp  MouseCollider.hpp  Music.hpp  RectangleShape.hpp  Sound.hpp  Sprite.hpp  Text.hpp  Transform.hpp  Transformable.hpp
Engine/sfml/SF/managers/: AnimatedSpriteManager.hpp  BoxColliderManager.hpp  DrawableManager.hpp  MouseColliderManager.hpp  MusicManager.hpp  SoundManager.hpp  TransformManager.hpp  TransformableManager.hpp
Engine/sfml/SF/maths/: Rect.hpp  Vector2.hpp  Vector3.hpp
Engine/sfml/SF/resources/: Font.hpp  Music.hpp  Sound.hpp  Texture.hpp
Engine/sfml/SF/utils/: Span.hpp  TimePoint.hpp
Engine/sfml/includes/: Event.hpp  Module.hpp  concept.hpp
Engine/sfml/includes/components/: AnimatedSprite.hpp  BoxCollider.hpp  MouseCollider.hpp  Music.hpp  Sound.hpp  Sprite.hpp  Text.hpp  Transform.hpp
Engine/sfml/includes/components/Drawable/: Drawable.hpp  Drawable.inl
Engine/sfml/includes/components/Transformable/: Transformable.hpp  Transformable.inl
Engine/sfml/includes/components/shapes/: CircleShape.hpp  RectangleShape.hpp
Engine/sfml/includes/managers/: AnimatedSpriteManager.hpp  BoxColliderManager.hpp  DrawableManager.hpp  MouseColliderManager.hpp  MusicManager.hpp  SoundManager.hpp  TransformManager.hpp  TransformableManager.hpp
Engine/sfml/includes/maths/: Rect.hpp  Vector2.hpp  Vector3.hpp
Engine/sfml/includes/resources/: Font.hpp  Music.hpp  Resources.hpp  Sound.hpp  Texture.hpp
Engine/sfml/includes/utils/: Span.hpp  TimePoint.hpp
Project/assets/: fonts.json  musics.json  sounds.json  textures.json
Project/includes/: ProjectModule.hpp  main.hpp
Project/sources/: MainScene.cpp  ProjectModule.cpp  main.cpp
